Day_5_vpc/main.tf
provider "aws" {
  region = "ap-south-1"
}

# --------VPC----------------------------------------------
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "todex-vpc"
  }
}

#------------IGW------------------------------------------
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "main-igw"
  }
}

#----------ELASTIC IP FOR NAT------------------------------
resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-eip"
  }
}

#-----------NAT GATEWAY (lives in public subnet)----------
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "main-nat"
  }

  depends_on = [aws_internet_gateway.igw]
}

#-------PUBLIC SUBNET-------------------------------------
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-rt"
  }
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public_rt.id
}

#-------PUBLIC SECURITY GROUP-----------------------------
resource "aws_security_group" "public-sg" {
  name = "public-sg"
  description = "Allow SSH and HTTP/S from internet"
  vpc_id = aws_vpc.vpc.id

  # INBOUND : SSH from anywhere
  ingress {
    description = "SSH"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # inbound : http
   ingress {
    description = "HTTPS"
    from_port = "443"
    to_port = "443"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
   }

   # outbound : everything
   egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
   }

   tags = {
     Name = "public-sg"
   }
}

#------PRIVATE SUBNET-----------------------------------
resource "aws_subnet" "private" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = false

  tags = {
    Name = "private-subnet"
  }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "private-rt"
  }
}

resource "aws_route_table_association" "private_assoc" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private_rt.id
}

#----PRIVATE SECURITY GROUP--------------------------
resource "aws_security_group" "private-sg" {
  name = "private-sg"
  description = "Allow SSH only from public-sg , internal VPC traffic"
  vpc_id = aws_vpc.vpc.id

  # inbound : SSH only from the public EC2's SG (bastion pattern)
  ingress {
    description = "SSH from bastion "
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = ["aws_security_group.public-sg"]
  }

# inbound : all internal vpc traffics
  ingress {
    description = "Internal VPC"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # outbound : everything (goes via nat)
  egress {
   from_port = 0
   to_port = 0
   protocol = "-1"
   cidr_blocks = ["0.0.0.0/0"]
  }
  
  tags = {
    Name = "private-sg"
  }
}
